--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,10 @@
 .home {
-
+  header {
+    border-bottom: 2px dashed @navigation-border;
+    .header-content h1{
+      padding: 15px 15px 15px 0px;
+    }
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
