--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation Styles here
+nav {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 2px dashed grey;
+    align-items: baseline;
+    nav-logo {
+        padding: 10px 10px 10px 0;
+    }
+    nav-menu {
+        padding: 20px;
+        justify-content: space-between;
+        a {
+            margin: 20px;
+            font-size: 2em;
+            color: black;
+            text-decoration: none;
+        }
+    }
+  }
+
+  
