--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,4 +63,30 @@
       margin-bottom: 30px;
     }
   }
+  
 }// home
+@media (max-width: @mobileBreakpoint){
+  .home {
+    padding: 20px;
+    .content-section{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .text-content {
+        width: 100%;
+        padding-right: 1%;
+      }
+      .img-content {
+        width: 100%;
+      }
+    }
+  }
+  .content-pick {
+    display: flex;
+    flex-direction: column;
+  }
+  .destination {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
