--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,11 +1,12 @@
 // Navigation Styles here
+
 nav {
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-bottom: 2px dashed grey;
+    border-bottom: 2px dashed @navigation-border;
     align-items: baseline;
     nav-logo {
         padding: 10px 10px 10px 0;
@@ -22,4 +23,29 @@ nav {
     }
   }
 
-  
+  @media (max-width: @tabletBreakpoint){
+    nav{
+        padding: 20px;
+        display: flex;
+        a {
+            margin: 20px;
+        }
+    }
+  }
+  @media (max-width: @mobileBreakpoint){
+    nav{
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        nav-logo{   
+                padding: 20px;
+                display: flex;
+                justify-content: center
+            }                 
+            nav-menu{   
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+    }
+}
